Replace JNA with FMA