@@ -20,8 +20,11 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <release>18</release>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.foreign</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -84,11 +87,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
+        <configuration>
+          <argLine>--enable-preview --add-modules jdk.incubator.foreign --enable-native-access ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
-        <version>4.2.3</version>
+        <version>4.6.0.0</version>
         <executions>
           <execution>
             <id>check</id>
@@ -121,11 +127,6 @@
       <scope>provided</scope>
     </dependency>
     <!-- Dependencies of java-deptools-native -->
-    <dependency>
-      <groupId>net.java.dev.jna</groupId>
-      <artifactId>jna</artifactId>
-      <version>4.1.0</version>
-    </dependency>
     <dependency>
       <groupId>org.tukaani</groupId>
       <artifactId>xz</artifactId>
